--- a/docs/style.css
+++ b/docs/style.css
@@ -2,7 +2,7 @@
 
 
 .book .book-body .page-wrapper .page-inner {
-  max-width: 1920px !important;
+  max-width: 80% !important;
 }
 
 .summary > li:first-child {
@@ -47,6 +47,8 @@ h4 {
  
  .subtitle {
   font-family: 'Lato', serif;
+  font-style: normal !important;
+  font-weight: 400;
   color: #3c6382;
 }
 
@@ -136,7 +138,46 @@ font-family: 'Lato', sans-serif;
 
 li.appendix span, li.part span { /* for TOC part names */
   margin-top: 1em;
+  padding-bottom: 0px !important;
   color: color: #1c3046 !important;
   opacity: 1 !important;
   text-transform: uppercase;
+}
+
+.book .book-header h1 {
+    font-family: 'Lato', serif !important;
+    font-weight: 400 !important;
+}
+
+/* -----------Section anchors -------------*/
+
+.book .book-body .page-wrapper .page-inner section.normal {
+  overflow: visible !important; /*so anchor link doesnt get cut off */
+}
+
+a.anchor{
+  margin-left: -30px;
+  padding-right: 3px;
+  display:inline-block;
+  width: 30px;
+  height: 30px;
+  background-image: url('files/anchor_icon.png') !important;
+  background-repeat: no-repeat !important;
+  background-size: 20px 20px !important;
+  background-position: center bottom !important;
+  opacity: 0;
+}
+
+a.anchor-section{
+   opacity: 0;
+}
+
+.hasAnchor:hover a.anchor, a.anchor:hover {
+  opacity: 0.6;
+}
+
+@media (max-width: 1144px) { /* dont show anchor link on small screens */
+  .hasAnchor:hover a.anchor {
+visibility: hidden;
+  }
 }
