--- a/style.css
+++ b/style.css
@@ -190,7 +190,9 @@ a.anchor{
 }
 
 .figure {
-    max-width: 1500px;
-    min-width: 650px;
+    max-width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
 }
     
