--- a/docs/style.css
+++ b/docs/style.css
@@ -195,4 +195,11 @@ a.anchor{
     margin-left: auto;
     margin-right: auto
 }
+
+
+
+.my-header {
+  background-color: #60a3bc;
+  color: white; 
+}
     
